Criação do botão deletar ideia

--- a/views/all_ideas.html
+++ b/views/all_ideas.html
@@ -9,7 +9,10 @@
             <div class="description">
                 {{idea.description}}
             </div>
+
             <a href="{{idea.link}}">Ir para a Ideia</a>
+            <button id="button_del" onclick="">Apagar Ideia</button>
+        
         </div> 
     </div>
 {% endfor%}
