--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,3 @@
-
 /*
 CSS
 
@@ -178,6 +177,26 @@ footer a {
     margin: 16px 0;
 }
 
+#button_del {
+    background: red;
+    color: white;
+    
+    margin-left: 200px;
+
+    width: 100px;
+    height: 22px;
+    
+    font-size: 14px;
+
+    border-radius: 6px;
+
+    cursor: pointer;
+}
+
+#button_del:hover {
+    text-decoration: none;
+}
+
 /* modal */
 
 #modal {
@@ -308,7 +327,6 @@ form button:hover {
 #modal.hide {
     opacity: 0; /* mostrar */
     visibility: hidden;
-    
 }
 
 /* ideias.html */
